@@ -83,7 +83,7 @@
 	</properties>
 
 	<prerequisites>
-		<maven>3.0</maven>
+		<maven>3.0.5</maven>
 	</prerequisites>
 
 	<!-- Where to push the service parent itself, should not be used by children -->
@@ -144,7 +144,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.0</version>
+					<version>2.22.1</version>
 					<configuration>
 						<systemProperties>
 							<property>
@@ -183,7 +183,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.1.0</version>
+					<version>3.1.1</version>
 				</plugin>
 
 				<plugin>
@@ -196,12 +196,24 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
 					<version>3.0.1</version>
+					<configuration>
+						<additionalOptions>
+							<additionalOption>--add-modules java.xml.bind</additionalOption>
+							<additionalOption>--add-modules java.xml.ws.annotation</additionalOption>
+						</additionalOptions>
+					</configuration>
 				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-site-plugin</artifactId>
 					<version>3.7.1</version>
+				</plugin>
+
+				<plugin>
+					<groupId>com.spotify</groupId>
+					<artifactId>docker-maven-plugin</artifactId>
+					<version>1.2.0</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -217,7 +229,7 @@
 					<missing>.noservice</missing>
 				</file>
 			</activation>
-			
+
 			<build>
 				<plugins>
 					<!-- Use the def-pi plugin to generate stubs -->
@@ -252,26 +264,6 @@
 									<sources>
 										<source>${defpi.sources.generated}</source>
 									</sources>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-					<!-- Create javadoc, but not for generated code -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>attach-javadocs</id>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-								<configuration>
-									<sourceFileExcludes>
-										<sourceFileExclude>${defpi.resources.generated}</sourceFileExclude>
-									</sourceFileExcludes>
-									<quiet>true</quiet>
 								</configuration>
 							</execution>
 						</executions>
@@ -324,20 +316,6 @@
 						</configuration>
 					</plugin>
 
-					<!--Attach sources when packaging -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-source-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>attach-sources</id>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
 					<!-- The assembly plugin puts all java code in one jar -->
 					<plugin>
 						<artifactId>maven-assembly-plugin</artifactId>
@@ -368,7 +346,6 @@
 					<plugin>
 						<groupId>com.spotify</groupId>
 						<artifactId>docker-maven-plugin</artifactId>
-						<version>1.1.1</version>
 						<executions>
 							<execution>
 								<!-- Build x86_64 image -->
